Fixed regression from making popover work with .collapse.

--- a/less/component-animations.less
+++ b/less/component-animations.less
@@ -18,6 +18,5 @@
   .transition(height .15s ease);
   &.in {
     height: auto;
-    overflow: visible;
   }
 }
